--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -3,7 +3,7 @@
 dependencies {
     shadowImplementation('com.github.GTNewHorizons:AVRcore:master-SNAPSHOT')
 
-    compile('com.github.GTNewHorizons:GT5-Unofficial:5.09.40.49:dev')
+    compile('com.github.GTNewHorizons:GT5-Unofficial:5.09.40.64-pre:dev')
     compile('com.github.GTNewHorizons:Yamcl:0.5.82:dev')
     compile('com.github.GTNewHorizons:NotEnoughItems:2.2.15-GTNH:dev')
     compile('com.github.GTNewHorizons:CodeChickenLib:1.1.5.3:dev')
